change: レベルローディング機能の移行と改善
* `LevelLoader` クラスを削除し、`LevelHelper` クラスを追加しました。これにより、レベルローディングの機能が新しいヘルパークラスに移行されました。
* `LevelData.cpp` でのJSONデータの割り当て順序を修正し、正しいデータ読み込みを実現しました。
* 新しいシーンクラス `TL1Task1` を追加し、初期化、終了、更新、描画のメソッドを実装しました。
* `ParticleManager.cpp` でパーティクルの削除処理を改善し、削除するパーティクルの数を事前に計算するように変更しました。
* 新しいJSONファイル `test.json` を追加し、シーンのオブジェクト情報を含めました。
* `imgui.ini` でウィンドウのドッキング設定を調整しました。

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -247,7 +247,7 @@
     <ClCompile Include="Features\GameEye\GameEye.cpp" />
     <ClCompile Include="Features\Input\Input.cpp" />
     <ClCompile Include="Features\LevelLoader\LevelData.cpp" />
-    <ClCompile Include="Features\LevelLoader\LevelLoader.cpp" />
+    <ClCompile Include="Features\LevelLoader\LevelHelper.cpp" />
     <ClCompile Include="Features\LevelLoader\SceneObjects.cpp" />
     <ClCompile Include="Features\Lighting\Manager\LightingManager.cpp" />
     <ClCompile Include="Features\Lighting\PointLight\PointLight.cpp" />
@@ -356,7 +356,7 @@
     <ClInclude Include="Features\Input\Input.h" />
     <ClInclude Include="Features\LevelLoader\ISceneObjects.h" />
     <ClInclude Include="Features\LevelLoader\LevelData.h" />
-    <ClInclude Include="Features\LevelLoader\LevelLoader.h" />
+    <ClInclude Include="Features\LevelLoader\LevelHelper.h" />
     <ClInclude Include="Features\LevelLoader\SceneObjects.h" />
     <ClInclude Include="Features\Lighting\Manager\LightingManager.h" />
     <ClInclude Include="Features\Lighting\PointLight\PointLight.h" />
