add: googletestサブモジュールを追加
* `.gitmodules`ファイルに新しいサブモジュール「googletest」が追加され、対応するパスとURLが設定されました。
* `googletest`のサブプロジェクトコミットが追加されました。

バイナリファイルやJSONファイルの変更はありません。

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Engine/Externals/NiGui"]
 	path = Engine/Externals/NiGui
 	url = https://github.com/Souto-Naitou/NiGui.git
+[submodule "Engine/Externals/googletest"]
+	path = Engine/Externals/googletest
+	url = https://github.com/google/googletest.git
