change: Tests.vcxprojの依存関係を更新
* `<AdditionalIncludeDirectories>`から`VectorMatrix\math`のパスを削除しました。
* `<ProjectReference>`に`VecMat.vcxproj`を追加し、プロジェクトの依存関係を整理しました。

バイナリファイルやJSONファイルの変更はありません。

--- a/Tests/Tests.vcxproj
+++ b/Tests/Tests.vcxproj
@@ -59,7 +59,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\Engine;$(ProjectDir)..\Engine\Externals;$(ProjectDir)..\Engine\Externals\VectorMatrix\math;$(ProjectDir)..\Engine\Externals\googletest\googletest\include;$(ProjectDir)..\Engine\Externals\googletest\googlemock\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\Engine;$(ProjectDir)..\Engine\Externals;$(ProjectDir)..\Engine\Externals\googletest\googletest\include;$(ProjectDir)..\Engine\Externals\googletest\googlemock\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
@@ -105,6 +105,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Engine\Engine.vcxproj">
       <Project>{9FD2D32D-DAB0-40A1-B430-CBC12517B87C}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Engine\Externals\VectorMatrix\Project\VecMat.vcxproj">
+      <Project>{a87ad77f-cc08-4788-8630-68470354fcd3}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
