change: ビルド設定の更新とスクリプトの改善
* ゲームエンジンのソリューション設定において、`Release|x64`のビルド設定が削除され、`Debug_ASAN|x64`のビルド設定が追加されました。

* `Tests.vcxproj`ファイルでは、`PreBuildEvent`のコマンドが変更され、空のコマンドが追加されました。

バイナリファイルやJSONファイルに関する変更はありません。

--- a/Tests/Tests.vcxproj
+++ b/Tests/Tests.vcxproj
@@ -94,7 +94,8 @@
       <AdditionalDependencies>Engine.lib;gtest.lib;gtest_main.lib;gmock.lib;gmock_main.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
-      <Command>call ../build_gtest.bat</Command>
+      <Command>
+      </Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
